changes name as suggested by copilot

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-node-template",
+  "name": "mern-boilerplate",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "cd src/server && npm install && npm start",
+    "build-fe": "cd src/client && npm install && npm run build",
     "dev": "concurrently \"cd src/server && nodemon\" \"cd src/client && npm start\"",
     "logs": "heroku logs -t",
     "heroku-postbuild": "cd src/client && npm install && npm run build"
