--- a/src/client/package.json
+++ b/src/client/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "npm-run-all": "^4.1.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0"
@@ -14,7 +15,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "run-p dev:*",
+    "dev:start": "react-scripts start",
+    "dev:css": "npm run generate:css -- --watch",
+    "generate:css": "tailwindcss -o ./src/tailwind.css"
   },
   "eslintConfig": {
     "extends": "react-app"
