--- a/src/server/package.json
+++ b/src/server/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.1",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "trueskill": "^0.0.2"
   }
 }
